--- a/style.css
+++ b/style.css
@@ -12,10 +12,15 @@ body {
 
 /*----- used colors ------*/
 /*--- #ec6701 orange buttons ---*/
-/*--- rgb(241, 241, 241) grey background ---*/
 /*--- white , most containers ---*/
 /*--- #ae0b05, standard red---*/
 /*--- #cb0050 pink/red background ---*/
+/*--- background: linear-gradient(100deg,#cb0050 0,#fa1a74 100%); pink background with gradient --*/
+/*--- background-color: #b1f5ff; Light blue field ---*/
+/*--- Font-family Roboto <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> ---*/
+/*--- chat icon color  #fa1a74; ---*/
+/*--- slightly brighter red used in some fields background-color: #e3000f; ---*/
+ 
 
 
 li {
@@ -34,7 +39,6 @@ a {
     width: 100%;
     background-color: white;
     margin: auto;
-    padding: 0 32px 0 32px;
 }
 
 .upphead {
@@ -52,7 +56,7 @@ a {
     margin-top: 22px;
     margin-bottom: 23px;
     width: 80px;
-    margin-left: 1.5%;
+    margin-left: 3.6%;
 }
 
 .hbglogo img {
@@ -114,7 +118,7 @@ a {
 
 .lowerheader {
     background-color:#ae0b05;
-    padding: 18px 32px 20px 32px;
+    padding: 18px 0px 20px 0px;
     position: sticky;
     top:0px;
     z-index: 1;
@@ -127,7 +131,7 @@ a {
 }
 
 .lowhead {
-    max-width: 1423px;
+    max-width: 1328px;
     margin: auto;
     width: 100%;
     text-align: left;
@@ -136,7 +140,7 @@ a {
 
 .lh-1 {
     flex: 0.30;
-    padding-left: 71px;
+    padding-left:32px;
     
 }
 .lh-2 {
@@ -157,6 +161,7 @@ a {
 
 .lh-7 {
     flex: 0.9;
+    padding-right:32px;
 }
 .wrap
 { 
